implemented tests for sensor data
max difference removed from anomalies
